twowaySQL/src/twowaysql/grammar/TwoWaySQLParser.java
// $ANTLR 3.0.1 D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g 2008-04-17 17:51:32

package twowaysql.grammar;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class TwoWaySQLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BEGINNODE", "IFNODE", "EXPRESSIONNODE", "ELSENODE", "ELSEIFNODE", "BINDNODE", "INBINDNODE", "IDENT", "SYMBOLS", "QUOTED", "SYM_BIND", "SYM_C", "SYM_LP", "SYM_RP", "C_ST", "C_ED", "C_LN_ST", "C_LN_ED", "IF", "ELSEIF", "ELSE", "BEGIN", "END", "IN", "SYM_Q", "LN_R", "LN_N", "CHAR", "WS", "LT", "WHITE_SPACES"
    };
    public static final int BINDNODE=9;
    public static final int LT=33;
    public static final int C_ST=18;
    public static final int QUOTED=13;
    public static final int SYM_RP=17;
    public static final int INBINDNODE=10;
    public static final int ELSE=24;
    public static final int SYM_LP=16;
    public static final int CHAR=31;
    public static final int C_LN_ST=20;
    public static final int EOF=-1;
    public static final int C_ED=19;
    public static final int IF=22;
    public static final int ELSEIFNODE=8;
    public static final int WHITE_SPACES=34;
    public static final int ELSEIF=23;
    public static final int WS=32;
    public static final int SYM_Q=28;
    public static final int IN=27;
    public static final int BEGIN=25;
    public static final int IFNODE=5;
    public static final int IDENT=11;
    public static final int SYMBOLS=12;
    public static final int SYM_C=15;
    public static final int END=26;
    public static final int EXPRESSIONNODE=6;
    public static final int SYM_BIND=14;
    public static final int ELSENODE=7;
    public static final int C_LN_ED=21;
    public static final int BEGINNODE=4;
    public static final int LN_N=30;
    public static final int LN_R=29;

        public TwoWaySQLParser(TokenStream input) {
            super(input);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g"; }


    public static class twowaySQL_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start twowaySQL
    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:32:1: twowaySQL : txt EOF ;
    public final twowaySQL_return twowaySQL() throws RecognitionException {
        twowaySQL_return retval = new twowaySQL_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EOF2=null;
        txt_return txt1 = null;


        CommonTree EOF2_tree=null;

        try {
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:32:11: ( txt EOF )
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:32:13: txt EOF
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_txt_in_twowaySQL96);
            txt1=txt();
            _fsp--;

            adaptor.addChild(root_0, txt1.getTree());
            EOF2=(Token)input.LT(1);
            match(input,EOF,FOLLOW_EOF_in_twowaySQL98); 
            EOF2_tree = (CommonTree)adaptor.create(EOF2);
            adaptor.addChild(root_0, EOF2_tree);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end twowaySQL

    public static class txt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start txt
    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:34:1: txt : ( comment | inbind | charactors )+ ;
    public final txt_return txt() throws RecognitionException {
        txt_return retval = new txt_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        comment_return comment3 = null;

        inbind_return inbind4 = null;

        charactors_return charactors5 = null;



        try {
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:34:5: ( ( comment | inbind | charactors )+ )
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:34:7: ( comment | inbind | charactors )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:34:7: ( comment | inbind | charactors )+
            int cnt1=0;
            loop1:
            do {
                int alt1=4;
                switch ( input.LA(1) ) {
                case C_ST:
                    {
                    int LA1_2 = input.LA(2);

                    if ( ((LA1_2>=IDENT && LA1_2<=SYM_RP)||LA1_2==IF||LA1_2==BEGIN) ) {
                        alt1=1;
                    }


                    }
                    break;
                case C_LN_ST:
                    {
                    int LA1_3 = input.LA(2);

                    if ( ((LA1_3>=IDENT && LA1_3<=SYM_RP)||LA1_3==BEGIN) ) {
                        alt1=1;
                    }


                    }
                    break;
                case IN:
                    {
                    alt1=2;
                    }
                    break;
                case IDENT:
                case SYMBOLS:
                case QUOTED:
                case SYM_BIND:
                case SYM_C:
                case SYM_LP:
                case SYM_RP:
                    {
                    alt1=3;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:34:8: comment
            	    {
            	    pushFollow(FOLLOW_comment_in_txt107);
            	    comment3=comment();
            	    _fsp--;

            	    adaptor.addChild(root_0, comment3.getTree());

            	    }
            	    break;
            	case 2 :
            	    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:34:18: inbind
            	    {
            	    pushFollow(FOLLOW_inbind_in_txt111);
            	    inbind4=inbind();
            	    _fsp--;

            	    adaptor.addChild(root_0, inbind4.getTree());

            	    }
            	    break;
            	case 3 :
            	    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:34:27: charactors
            	    {
            	    pushFollow(FOLLOW_charactors_in_txt115);
            	    charactors5=charactors();
            	    _fsp--;

            	    adaptor.addChild(root_0, charactors5.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end txt

    public static class charactors_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start charactors
    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:37:1: charactors : ( IDENT | SYMBOLS | QUOTED | SYM_BIND | SYM_C | SYM_LP | SYM_RP )+ ;
    public final charactors_return charactors() throws RecognitionException {
        charactors_return retval = new charactors_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set6=null;

        CommonTree set6_tree=null;

        try {
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:37:12: ( ( IDENT | SYMBOLS | QUOTED | SYM_BIND | SYM_C | SYM_LP | SYM_RP )+ )
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:38:2: ( IDENT | SYMBOLS | QUOTED | SYM_BIND | SYM_C | SYM_LP | SYM_RP )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:38:2: ( IDENT | SYMBOLS | QUOTED | SYM_BIND | SYM_C | SYM_LP | SYM_RP )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=IDENT && LA2_0<=SYM_RP)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:
            	    {
            	    set6=(Token)input.LT(1);
            	    if ( (input.LA(1)>=IDENT && input.LA(1)<=SYM_RP) ) {
            	        input.consume();
            	        adaptor.addChild(root_0, adaptor.create(set6));
            	        errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse =
            	            new MismatchedSetException(null,input);
            	        recoverFromMismatchedSet(input,mse,FOLLOW_set_in_charactors128);    throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end charactors

    public static class comment_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start comment
    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:42:1: comment : ( begincomment | ifcomment | bindcomment | blockcomment | linecomment );
    public final comment_return comment() throws RecognitionException {
        comment_return retval = new comment_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        begincomment_return begincomment7 = null;

        ifcomment_return ifcomment8 = null;

        bindcomment_return bindcomment9 = null;

        blockcomment_return blockcomment10 = null;

        linecomment_return linecomment11 = null;



        try {
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:42:9: ( begincomment | ifcomment | bindcomment | blockcomment | linecomment )
            int alt3=5;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:43:2: begincomment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_begincomment_in_comment166);
                    begincomment7=begincomment();
                    _fsp--;

                    adaptor.addChild(root_0, begincomment7.getTree());

                    }
                    break;
                case 2 :
                    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:44:4: ifcomment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_ifcomment_in_comment171);
                    ifcomment8=ifcomment();
                    _fsp--;

                    adaptor.addChild(root_0, ifcomment8.getTree());

                    }
                    break;
                case 3 :
                    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:45:4: bindcomment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_bindcomment_in_comment176);
                    bindcomment9=bindcomment();
                    _fsp--;

                    adaptor.addChild(root_0, bindcomment9.getTree());

                    }
                    break;
                case 4 :
                    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:46:4: blockcomment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_blockcomment_in_comment181);
                    blockcomment10=blockcomment();
                    _fsp--;

                    adaptor.addChild(root_0, blockcomment10.getTree());

                    }
                    break;
                case 5 :
                    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:47:4: linecomment
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_linecomment_in_comment186);
                    linecomment11=linecomment();
                    _fsp--;

                    adaptor.addChild(root_0, linecomment11.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end comment

    public static class blockcomment_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start blockcomment
    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:50:1: blockcomment : C_ST charactors C_ED ;
    public final blockcomment_return blockcomment() throws RecognitionException {
        blockcomment_return retval = new blockcomment_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token C_ST12=null;
        Token C_ED14=null;
        charactors_return charactors13 = null;


        CommonTree C_ST12_tree=null;
        CommonTree C_ED14_tree=null;

        try {
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:50:14: ( C_ST charactors C_ED )
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:51:2: C_ST charactors C_ED
            {
            root_0 = (CommonTree)adaptor.nil();

            C_ST12=(Token)input.LT(1);
            match(input,C_ST,FOLLOW_C_ST_in_blockcomment197); 
            C_ST12_tree = (CommonTree)adaptor.create(C_ST12);
            adaptor.addChild(root_0, C_ST12_tree);

            pushFollow(FOLLOW_charactors_in_blockcomment199);
            charactors13=charactors();
            _fsp--;

            adaptor.addChild(root_0, charactors13.getTree());
            C_ED14=(Token)input.LT(1);
            match(input,C_ED,FOLLOW_C_ED_in_blockcomment201); 
            C_ED14_tree = (CommonTree)adaptor.create(C_ED14);
            adaptor.addChild(root_0, C_ED14_tree);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end blockcomment

    public static class linecomment_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start linecomment
    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:53:1: linecomment : C_LN_ST charactors C_LN_ED ;
    public final linecomment_return linecomment() throws RecognitionException {
        linecomment_return retval = new linecomment_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token C_LN_ST15=null;
        Token C_LN_ED17=null;
        charactors_return charactors16 = null;


        CommonTree C_LN_ST15_tree=null;
        CommonTree C_LN_ED17_tree=null;

        try {
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:53:13: ( C_LN_ST charactors C_LN_ED )
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:54:2: C_LN_ST charactors C_LN_ED
            {
            root_0 = (CommonTree)adaptor.nil();

            C_LN_ST15=(Token)input.LT(1);
            match(input,C_LN_ST,FOLLOW_C_LN_ST_in_linecomment211); 
            C_LN_ST15_tree = (CommonTree)adaptor.create(C_LN_ST15);
            adaptor.addChild(root_0, C_LN_ST15_tree);

            pushFollow(FOLLOW_charactors_in_linecomment213);
            charactors16=charactors();
            _fsp--;

            adaptor.addChild(root_0, charactors16.getTree());
            C_LN_ED17=(Token)input.LT(1);
            match(input,C_LN_ED,FOLLOW_C_LN_ED_in_linecomment215); 
            C_LN_ED17_tree = (CommonTree)adaptor.create(C_LN_ED17);
            adaptor.addChild(root_0, C_LN_ED17_tree);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end linecomment

    public static class ifcomment_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start ifcomment
    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:56:1: ifcomment : ( C_ST IF expression C_ED txt ( elseifnode )* ( elsenode )? endcomment ) -> ^( IFNODE expression txt ( elseifnode )* ( elsenode )? ) ;
    public final ifcomment_return ifcomment() throws RecognitionException {
        ifcomment_return retval = new ifcomment_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token C_ST18=null;
        Token IF19=null;
        Token C_ED21=null;
        expression_return expression20 = null;

        txt_return txt22 = null;

        elseifnode_return elseifnode23 = null;

        elsenode_return elsenode24 = null;

        endcomment_return endcomment25 = null;


        CommonTree C_ST18_tree=null;
        CommonTree IF19_tree=null;
        CommonTree C_ED21_tree=null;
        RewriteRuleTokenStream stream_C_ST=new RewriteRuleTokenStream(adaptor,"token C_ST");
        RewriteRuleTokenStream stream_C_ED=new RewriteRuleTokenStream(adaptor,"token C_ED");
        RewriteRuleTokenStream stream_IF=new RewriteRuleTokenStream(adaptor,"token IF");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_elsenode=new RewriteRuleSubtreeStream(adaptor,"rule elsenode");
        RewriteRuleSubtreeStream stream_endcomment=new RewriteRuleSubtreeStream(adaptor,"rule endcomment");
        RewriteRuleSubtreeStream stream_txt=new RewriteRuleSubtreeStream(adaptor,"rule txt");
        RewriteRuleSubtreeStream stream_elseifnode=new RewriteRuleSubtreeStream(adaptor,"rule elseifnode");
        try {
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:56:11: ( ( C_ST IF expression C_ED txt ( elseifnode )* ( elsenode )? endcomment ) -> ^( IFNODE expression txt ( elseifnode )* ( elsenode )? ) )
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:57:2: ( C_ST IF expression C_ED txt ( elseifnode )* ( elsenode )? endcomment )
            {
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:57:2: ( C_ST IF expression C_ED txt ( elseifnode )* ( elsenode )? endcomment )
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:57:3: C_ST IF expression C_ED txt ( elseifnode )* ( elsenode )? endcomment
            {
            C_ST18=(Token)input.LT(1);
            match(input,C_ST,FOLLOW_C_ST_in_ifcomment226); 
            stream_C_ST.add(C_ST18);

            IF19=(Token)input.LT(1);
            match(input,IF,FOLLOW_IF_in_ifcomment228); 
            stream_IF.add(IF19);

            pushFollow(FOLLOW_expression_in_ifcomment230);
            expression20=expression();
            _fsp--;

            stream_expression.add(expression20.getTree());
            C_ED21=(Token)input.LT(1);
            match(input,C_ED,FOLLOW_C_ED_in_ifcomment232); 
            stream_C_ED.add(C_ED21);

            pushFollow(FOLLOW_txt_in_ifcomment234);
            txt22=txt();
            _fsp--;

            stream_txt.add(txt22.getTree());
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:57:31: ( elseifnode )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==C_ST) ) {
                    int LA4_1 = input.LA(2);

                    if ( (LA4_1==ELSEIF) ) {
                        alt4=1;
                    }


                }
                else if ( (LA4_0==C_LN_ST) ) {
                    int LA4_2 = input.LA(2);

                    if ( (LA4_2==ELSEIF) ) {
                        alt4=1;
                    }


                }


                switch (alt4) {
            	case 1 :
            	    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:57:31: elseifnode
            	    {
            	    pushFollow(FOLLOW_elseifnode_in_ifcomment236);
            	    elseifnode23=elseifnode();
            	    _fsp--;

            	    stream_elseifnode.add(elseifnode23.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:57:43: ( elsenode )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==C_ST) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==ELSE) ) {
                    alt5=1;
                }
            }
            else if ( (LA5_0==C_LN_ST) ) {
                int LA5_2 = input.LA(2);

                if ( (LA5_2==ELSE) ) {
                    alt5=1;
                }
            }
            switch (alt5) {
                case 1 :
                    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:57:43: elsenode
                    {
                    pushFollow(FOLLOW_elsenode_in_ifcomment239);
                    elsenode24=elsenode();
                    _fsp--;

                    stream_elsenode.add(elsenode24.getTree());

                    }
                    break;

            }

            pushFollow(FOLLOW_endcomment_in_ifcomment242);
            endcomment25=endcomment();
            _fsp--;

            stream_endcomment.add(endcomment25.getTree());

            }


            // AST REWRITE
            // elements: txt, elseifnode, elsenode, expression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 58:2: -> ^( IFNODE expression txt ( elseifnode )* ( elsenode )? )
            {
                // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:58:5: ^( IFNODE expression txt ( elseifnode )* ( elsenode )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(IFNODE, "IFNODE"), root_1);

                adaptor.addChild(root_1, stream_expression.next());
                adaptor.addChild(root_1, stream_txt.next());
                // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:58:29: ( elseifnode )*
                while ( stream_elseifnode.hasNext() ) {
                    adaptor.addChild(root_1, stream_elseifnode.next());

                }
                stream_elseifnode.reset();
                // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:58:41: ( elsenode )?
                if ( stream_elsenode.hasNext() ) {
                    adaptor.addChild(root_1, stream_elsenode.next());

                }
                stream_elsenode.reset();

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end ifcomment

    public static class elseifnode_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start elseifnode
    // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:61:1: elseifnode : elseifcomment txt -> ^( ELSEIFNODE elseifcomment txt ) ;
    public final elseifnode_return elseifnode() throws RecognitionException {
        elseifnode_return retval = new elseifnode_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        elseifcomment_return elseifcomment26 = null;

        txt_return txt27 = null;


        RewriteRuleSubtreeStream stream_txt=new RewriteRuleSubtreeStream(adaptor,"rule txt");
        RewriteRuleSubtreeStream stream_elseifcomment=new RewriteRuleSubtreeStream(adaptor,"rule elseifcomment");
        try {
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:61:12: ( elseifcomment txt -> ^( ELSEIFNODE elseifcomment txt ) )
            // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:62:2: elseifcomment txt
            {
            pushFollow(FOLLOW_elseifcomment_in_elseifnode273);
            elseifcomment26=elseifcomment();
            _fsp--;

            stream_elseifcomment.add(elseifcomment26.getTree());
            pushFollow(FOLLOW_txt_in_elseifnode275);
            txt27=txt();
            _fsp--;

            stream_txt.add(txt27.getTree());

            // AST REWRITE
            // elements: elseifcomment, txt
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 62:20: -> ^( ELSEIFNODE elseifcomment txt )
            {
                // D:\\development\\java\\workspace-3.3\\twowaySQL\\src\\twowaysql\\grammar\\TwoWaySQL.g:62:23: ^( ELSEIFNODE elseifcomment txt )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(ELSEIFNODE, "ELSEIFNODE"), root_1);

                adaptor.addChild(root_1, stream_elseifcomment.next());
                adaptor.addChild(root_1, stream_txt.next());

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
